# gemini-code-review-mcp

./: .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPRECATION_NOTES.md  MANUAL_RELEASE_GUIDE.md  MCP_INSPECTOR_GUIDE.md  MCP_PROTOCOL_PARAMETER_ANALYSIS.md  README.md  RELEASE_CHECKLIST.md  TESTING_GUIDE.md  example-task-list-management-rules.md  prd.md  prompt  pyproject.toml  pyrightconfig.json  requirements.txt  review  temp_test_file.txt  test_new_feature.py
examples/: code-review-comprehensive-20250528-173243.md  code-review-comprehensive-feedback-20250528-171640.md  example-task-list-management-rules.md
scripts/: check-cli.py  check-release-readiness.sh  quick-release.sh  release-check.sh  release.sh
src/: __init__.py  ai_code_review.py  ask_gemini.py  ask_gemini_cli.py  async_configuration_discovery.py  auto_prompt_generator.py  claude_memory_parser.py  cli_generate_file_context.py  cli_main.py  config_types.py  configuration_context.py  configuration_discovery.py  context_builder.py  context_generator.py  cursor_rules_parser.py  dependencies.py  errors.py  file_context_cli.py  file_context_types.py  gemini_api_client.py  generate_code_review_context.py  git_branch_comparison.py  git_utils.py  github_pr_integration.py  logging_config.py  meta_prompt_analyzer.py  meta_prompt_generator.py  model_config.json  model_config_manager.py  progress.py  server.py  task_list_parser.py  url_context_handler.py
tasks/: prd-git-branch-comparison-reviews.md  tasks-prd-claude-cursor-context-integration.md  tasks-prd-git-branch-comparison-reviews.md  tasks-prd.md
(+144 files in other folders)
